--- a/package.json
+++ b/package.json
@@ -1,39 +1,39 @@
 {
-    "name": "nav-enonicxp-dashboard",
-    "module": "index.ts",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
-        "lint": "eslint .",
-        "preview": "vite preview",
-        "start": "node server.js"
-    },
-    "devDependencies": {
-        "@navikt/eslint-config-navno": "1.3.1",
-        "@types/bun": "1.1.8",
-        "@types/react-dom": "18.3.0",
-        "@types/react": "18.3.3",
-        "eslint-plugin-react-hooks": "5.1.0-rc.0",
-        "eslint-plugin-react-refresh": "0.4.9",
-        "eslint": "9.9.0",
-        "husky": "9.1.5"
-    },
-    "peerDependencies": {
-        "typescript": "5.0.0"
-    },
-    "dependencies": {
-        "@eslint/js": "9.9.0",
-        "@vitejs/plugin-react": "4.3.1",
-        "express": "4.19.2",
-        "react-dom": "18.3.1",
-        "react": "18.3.1",
-        "typescript-eslint": "^8.0.1",
-        "typescript": "5.5.4",
-        "vite": "5.4.1"
-    },
-    "prettier": "@navikt/eslint-config-navno/prettier",
-    "eslintConfig": {
-        "extends": "@navikt/eslint-config-navno/eslint"
-    }
+  "name": "nav-enonicxp-dashboard",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "start": "bun run server.js"
+  },
+  "devDependencies": {
+    "@navikt/eslint-config-navno": "1.3.1",
+    "@types/bun": "1.1.8",
+    "@types/react-dom": "18.3.0",
+    "@types/react": "18.3.3",
+    "eslint-plugin-react-hooks": "5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "0.4.9",
+    "eslint": "9.9.0",
+    "husky": "9.1.5"
+  },
+  "peerDependencies": {
+    "typescript": "5.0.0"
+  },
+  "dependencies": {
+    "@eslint/js": "9.9.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "express": "4.19.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "sass": "^1.78.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.0.1",
+    "vite": "5.4.1"
+  },
+  "prettier": "@navikt/eslint-config-navno/prettier",
+  "eslintConfig": {
+    "extends": "@navikt/eslint-config-navno/eslint"
+  }
 }
