--- a/server/package.json
+++ b/server/package.json
@@ -3,12 +3,14 @@
     "version": "1.0.0",
     "private": true,
     "author": "NAV",
+    "type": "module",
     "license": "MIT",
     "scripts": {
-        "start": "node server.js"
+        "start": "VITE_ENV=local bun run --watch server.ts"
     },
     "dependencies": {
-        "@navikt/nav-dekoratoren-moduler": "2.1.6",
+        "@types/compression": "^1.7.5",
+        "@types/express": "^4.17.21",
         "compression": "1.7.4",
         "dotenv": "16.4.5",
         "express": "4.19.2",
@@ -18,6 +20,7 @@
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
         "react": "18.3.1",
+        "react-dom": "^18.3.1",
         "winston": "3.13.1"
     },
     "browserslist": [
