Reorganise folders and build structure

--- a/.env-sample
+++ b/.env-sample
@@ -1,2 +1,9 @@
+NODE_ENV=development
 VITE_ENV=local
 VITE_PUBLIC_URL=""
+VITE_PORT=3010
+VITE_SERVICE_SECRET=dummyToken
+VITE_APP_ORIGIN=http://localhost:3010
+VITE_ADMIN_ORIGIN=http://localhost:8080
+VITE_DECORATOR_YRL=http://localhost:8089
+VITE_XP_ORIGIN=http://localhost:8080
