--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -18,8 +18,8 @@
         "strict": true,
         "noFallthroughCasesInSwitch": true,
         "paths": {
-            "@/*": ["./src/*"]
+            "@/*": ["./*"]
         }
     },
-    "include": ["src"]
+    "include": ["**/*.ts", "**/*.tsx"]
 }
