--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
     "module": "index.ts",
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "tsc -b && vite build",
+        "dev": "VITE_ENV=local bun run --watch server-dev.ts",
+        "build": "bun run build:client && bun run build:server",
+        "build:client": "bun run --cwd packages/client build",
+        "build:server": "bun run --cwd packages/server build",
         "lint": "eslint .",
         "start": "cd server && bun run start"
     },
@@ -18,6 +20,10 @@
         "eslint": "9.9.0",
         "husky": "9.1.5"
     },
+    "workspaces": [
+        "packages/client",
+        "packages/server"
+    ],
     "peerDependencies": {
         "typescript": "5.0.0"
     },
@@ -27,6 +33,7 @@
         "express": "4.19.2",
         "react": "18.3.1",
         "react-dom": "18.3.1",
+        "react-router-dom": "^6.26.1",
         "sass": "^1.78.0",
         "typescript": "5.5.4",
         "typescript-eslint": "^8.0.1",
