--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "personopplysninger-server",
+    "name": "server",
     "version": "1.0.0",
     "private": true,
     "author": "NAV",
     "type": "module",
     "license": "MIT",
     "scripts": {
-        "start": "VITE_ENV=local bun run --watch server.ts"
+        "build": "tsc -b"
     },
     "dependencies": {
         "@types/compression": "^1.7.5",
         "@types/express": "^4.17.21",
+        "chokidar": "^3.6.0",
         "compression": "1.7.4",
         "dotenv": "16.4.5",
         "express": "4.19.2",
@@ -19,8 +20,6 @@
         "mustache-express": "1.3.2",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
-        "react": "18.3.1",
-        "react-dom": "^18.3.1",
         "winston": "3.13.1"
     },
     "browserslist": [
