--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -4,17 +4,17 @@
         "lib": ["ES2023"],
         "module": "ESNext",
         "skipLibCheck": true,
+        "outDir": "../../dist/server",
 
         /* Bundler mode */
         "moduleResolution": "bundler",
-        "allowImportingTsExtensions": true,
         "isolatedModules": true,
         "moduleDetection": "force",
-        "noEmit": true,
+        "noEmit": false,
 
         /* Linting */
         "strict": true,
         "noFallthroughCasesInSwitch": true
     },
-    "include": ["vite.config.ts"]
+    "include": ["server.ts"]
 }
