--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,20 +6,23 @@
     "type": "module",
     "license": "MIT",
     "scripts": {
+        "dev": "nodemon --watch './**/*.ts' --exec 'bun run ./server-dev.ts'",
         "build": "tsc -b"
     },
     "dependencies": {
         "@types/compression": "^1.7.5",
         "@types/express": "^4.17.21",
-        "chokidar": "^3.6.0",
         "compression": "1.7.4",
         "dotenv": "16.4.5",
         "express": "4.19.2",
         "html-react-parser": "5.1.10",
+        "http-proxy-middleware": "^3.0.2",
         "jsdom": "24.1.0",
         "mustache-express": "1.3.2",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
+        "nodemon": "^3.1.4",
+        "ts-node": "^10.9.2",
         "winston": "3.13.1"
     },
     "browserslist": [
