--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -5,14 +5,11 @@
         "module": "ESNext",
         "skipLibCheck": true,
         "outDir": "../../dist/server",
-
-        /* Bundler mode */
         "moduleResolution": "bundler",
         "isolatedModules": true,
+        "esModuleInterop": true,
         "moduleDetection": "force",
         "noEmit": false,
-
-        /* Linting */
         "strict": true,
         "noFallthroughCasesInSwitch": true
     },
