--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,12 +7,16 @@
     "license": "MIT",
     "scripts": {
         "dev": "nodemon --watch '.' --ext ts --exec 'bun run ./server-dev.ts'",
-        "build": "tsc -b"
+        "watch": "nodemon --watch '.' --ext ts --exec 'bun run build'",
+        "build": "tsc -b",
+        "start": "bun run ./dist/server/server.js"
     },
     "dependencies": {
         "@types/compression": "^1.7.5",
+        "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "compression": "1.7.4",
+        "cors": "^2.8.5",
         "dotenv": "16.4.5",
         "express": "4.19.2",
         "html-react-parser": "5.1.10",
