--- a/package.json
+++ b/package.json
@@ -1,46 +1,47 @@
 {
-    "name": "nav-enonicxp-dashboard",
-    "module": "index.ts",
-    "type": "module",
-    "scripts": {
-        "dev-hmr": "bun run --cwd packages/server dev-hmr",
-        "start-local": "bun run --cwd packages/server watch && bun ./dist/server/server.js",
-        "build": "bun run build:client && bun run build:server",
-        "build:client": "bun run --cwd packages/client build",
-        "build:server": "bun run --cwd packages/server build",
-        "lint": "eslint ."
-    },
-    "devDependencies": {
-        "@navikt/eslint-config-navno": "1.3.1",
-        "@types/bun": "1.1.8",
-        "@types/react-dom": "18.3.0",
-        "@types/react": "18.3.3",
-        "eslint-plugin-react-hooks": "5.1.0-rc.0",
-        "eslint-plugin-react-refresh": "0.4.9",
-        "eslint": "9.9.0",
-        "husky": "9.1.5"
-    },
-    "workspaces": [
-        "packages/client",
-        "packages/server"
-    ],
-    "peerDependencies": {
-        "typescript": "5.0.0"
-    },
-    "dependencies": {
-        "@eslint/js": "9.9.0",
-        "@vitejs/plugin-react": "4.3.1",
-        "express": "4.19.2",
-        "react": "18.3.1",
-        "react-dom": "18.3.1",
-        "react-router-dom": "^6.26.1",
-        "sass": "^1.78.0",
-        "typescript": "5.5.4",
-        "typescript-eslint": "^8.0.1",
-        "vite": "5.4.1"
-    },
-    "prettier": "@navikt/eslint-config-navno/prettier",
-    "eslintConfig": {
-        "extends": "@navikt/eslint-config-navno/eslint"
-    }
+  "name": "nav-enonicxp-dashboard",
+  "module": "index.ts",
+  "type": "module",
+  "scripts": {
+    "dev-hmr": "bun run --cwd packages/server dev-hmr",
+    "dev": "concurrently \"bun run --cwd packages/server dev\" \"bun run --cwd packages/client dev\"",
+    "build": "bun run build:client && bun run build:server",
+    "build:client": "bun run --cwd packages/client build",
+    "build:server": "bun run --cwd packages/server build",
+    "lint": "eslint ."
+  },
+  "devDependencies": {
+    "@navikt/eslint-config-navno": "1.3.1",
+    "@types/bun": "1.1.8",
+    "@types/react-dom": "18.3.0",
+    "@types/react": "18.3.3",
+    "eslint-plugin-react-hooks": "5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "0.4.9",
+    "eslint": "9.9.0",
+    "husky": "9.1.5"
+  },
+  "workspaces": [
+    "packages/client",
+    "packages/server"
+  ],
+  "peerDependencies": {
+    "typescript": "5.0.0"
+  },
+  "dependencies": {
+    "@eslint/js": "9.9.0",
+    "@vitejs/plugin-react": "4.3.1",
+    "concurrently": "^9.0.1",
+    "express": "4.19.2",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.26.1",
+    "sass": "^1.78.0",
+    "typescript": "5.5.4",
+    "typescript-eslint": "^8.0.1",
+    "vite": "5.4.1"
+  },
+  "prettier": "@navikt/eslint-config-navno/prettier",
+  "eslintConfig": {
+    "extends": "@navikt/eslint-config-navno/eslint"
+  }
 }
