--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,10 +6,11 @@
     "type": "module",
     "license": "MIT",
     "scripts": {
-        "dev": "nodemon --watch '.' --ext ts --exec 'bun run ./server-dev.ts'",
+        "dev-hmr": "nodemon --watch '.' --ext ts --exec 'bun run ./server-dev.ts'",
+        "dev": "bun run build && concurrently \"bun run start\" \"bun run watch\"",
+        "start": "bun ../../dist/server/server.js",
         "watch": "nodemon --watch '.' --ext ts --exec 'bun run build'",
-        "build": "tsc -b",
-        "start": "bun run ./dist/server/server.js"
+        "build": "tsc -b"
     },
     "dependencies": {
         "@types/compression": "^1.7.5",
