--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
   "dependencies": {
     "@eslint/js": "9.9.0",
     "@vitejs/plugin-react": "4.3.1",
-    "concurrently": "^9.0.1",
+    "concurrently": "9.0.1",
     "express": "4.19.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-router-dom": "^6.26.1",
-    "sass": "^1.78.0",
+    "react-router-dom": "6.26.1",
+    "sass": "1.78.0",
     "typescript": "5.5.4",
-    "typescript-eslint": "^8.0.1",
+    "typescript-eslint": "8.0.1",
     "vite": "5.4.1"
   },
   "prettier": "@navikt/eslint-config-navno/prettier",
