--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,9 +10,9 @@
         "@types/bun": "latest"
     },
     "peerDependencies": {
-        "typescript": "^5.0.0"
+        "typescript": "5.0.0"
     },
     "dependencies": {
-        "nodemon": "^3.1.4"
+        "nodemon": "3.1.4"
     }
 }
