--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,26 +8,27 @@
     "scripts": {
         "dev-hmr": "nodemon --watch '.' --ext ts --exec 'bun run ./server-dev.ts'",
         "dev": "bun run build && concurrently \"bun run start\" \"bun run watch\"",
-        "start": "bun ../../dist/server/server.js",
+        "start": "bun --watch ../../dist/server/server.js",
         "watch": "nodemon --watch '.' --ext ts --exec 'bun run build'",
         "build": "tsc -b"
     },
     "dependencies": {
-        "@types/compression": "^1.7.5",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
+        "@types/compression": "1.7.5",
+        "@types/cors": "2.8.17",
+        "@types/express": "4.17.21",
+        "body-parser": "^1.20.3",
         "compression": "1.7.4",
-        "cors": "^2.8.5",
+        "cors": "2.8.5",
         "dotenv": "16.4.5",
         "express": "4.19.2",
         "html-react-parser": "5.1.10",
-        "http-proxy-middleware": "^3.0.2",
+        "http-proxy-middleware": "3.0.2",
         "jsdom": "24.1.0",
         "mustache-express": "1.3.2",
         "node-cache": "5.1.2",
         "node-fetch": "3.3.2",
-        "nodemon": "^3.1.4",
-        "ts-node": "^10.9.2",
+        "nodemon": "3.1.4",
+        "ts-node": "10.9.2",
         "winston": "3.13.1"
     },
     "browserslist": [
