--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@vitejs/plugin-react": "4.3.1",
     "concurrently": "9.0.1",
     "express": "4.19.2",
+    "pino": "^9.4.0",
+    "pino-pretty": "^11.2.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-router-dom": "6.26.1",
