Legger til riktig public url

--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,6 @@
 NODE_ENV=development
 VITE_ENV=local
-VITE_PUBLIC_URL=""
+VITE_PUBLIC_URL=http://localhost:3010
 VITE_PORT=3010
 VITE_SERVICE_SECRET=dummyToken
 VITE_APP_ORIGIN=http://localhost:3010
